--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
 .container {
     display: flex;
 }
+
+.header .container {
+    justify-content: space-between;
+}
+
+ul.no-bullets {
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margins */
+  }  
