--- a/style.css
+++ b/style.css
@@ -14,4 +14,9 @@ ul.no-bullets {
     list-style-type: none; /* Remove bullets */
     padding: 0; /* Remove padding */
     margin: 0; /* Remove margins */
-  }  
+}
+
+.header a {
+    text-decoration: none;
+    color: black;
+}
