Finish basic structure of header
Deleted navbar and added logo and links to the header.
Added hero section content.

--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     font-family: "Roboto", sans-serif;
 }
 
-.container {
+.flex-container {
     display: flex;
 }
 
-.header .container {
+.header .flex-container {
     justify-content: space-between;
 }
 
