--- a/style.css
+++ b/style.css
@@ -4,6 +4,24 @@
     padding: 0;
 }
 
+.placeholder {
+    width: 300px;
+    height: 300px;
+    background-color: #ccc;
+    border: 1px solid #ddd;
+    display: block;
+}
+
+.card {
+    width: 100px;
+    height: 100px;
+    border-radius: 10%;
+}
+
+.quote {
+    background-color: #E5E7EB;
+}
+
 body {
     font-family: "Roboto", sans-serif;
 }
@@ -55,12 +73,4 @@ ul.no-bullets {
 .header .logo {
     font-size: 24px;
     color: #F9FAF8;
-}
-
-.placeholder {
-    width: 300px;
-    height: 300px;
-    background-color: #ccc;
-    border: 1px solid #ddd;
-    display: block;
 }
