Make action template in section

--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
     background-color: #E5E7EB;
 }
 
+.action {
+    background-color: #3882F6;
+}
+
 body {
     font-family: "Roboto", sans-serif;
 }
