--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 .placeholder {
-    width: 300px;
-    height: 300px;
+    width: 550px;
+    height: 250px;
     background-color: #ccc;
     border: 1px solid #ddd;
     display: block;
@@ -33,6 +33,19 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero, .information, .quote, .action {
+    flex: 1; /* remove? */
+    height: 550px;
+}
+
+.navbar, .footer {
+    height: 100px;
 }
 
 .flex-container {
