--- a/style.css
+++ b/style.css
@@ -12,10 +12,16 @@
     display: block;
 }
 
+.information.header-text {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+}
+
 .card {
-    width: 100px;
-    height: 100px;
-    border: 2px solid blue;
+    width: 190px;
+    height: 200px;
+    border: 4px solid blue;
     border-radius: 10%;
 }
 
@@ -37,14 +43,25 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .hero, .information, .quote, .action {
     flex: 1; /* remove? */
-    height: 450px;
+    height: 500px;
+    justify-content: center;
+    align-items: center;
 }
 
-.navbar, .footer {
+/* every item is a box */
+/* add margins, paddings to fix the style */
+/* or use height-width / flex-basis */
+
+.navbar {
+    height: 75px;
+}
+
+.footer {
     height: 100px;
 }
 
@@ -58,6 +75,11 @@ body {
 
 .header .flex-container {
     justify-content: space-between;
+}
+
+.flex-container.information {
+    flex-direction: column;
+    gap: 50px;
 }
 
 .navbar ul {
