Make changes to quote and footer

--- a/style.css
+++ b/style.css
@@ -46,6 +46,20 @@ body {
     color: #E5E7EB;
 }
 
+.quote {
+    display: flex;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+}
+.quote .flex-container {
+    flex-direction: column;
+}
+
+.footer {
+    display: flex;
+}
+
 .hero, .information, .quote, .action {
     /* display: flex; */
     flex: 1; /* remove? */
@@ -105,6 +119,17 @@ ul.no-bullets {
 .header, .footer {
     background-color: #1F2937;
 }
+
+/* why header is full background-color, and quote, action and footer are not ?
+because header is not flex item, and does not have 30px padding, and it has 2 flexbox items
+quote, action and footer are flex items, and they have padding 30px */
+
+/*
+-    <footer class="footer">
+-        <div class="flex-container">
++    <footer class="footer flex-container">
++        <div>   <!-- to make full like header: <div class="flex-container">, and no flex-container in footer -->
+*/
 
 .header h1 {
     font-size: 48px;
