--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 .quote .author {
     align-self: end;
     font-weight: bold;
-    font-size: large;
+    font-size: x-large;
 }
 
 .footer {
